--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,145 +13,147 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
-        android:columnCount="4">
+        android:orientation="vertical"
+        android:rowCount="5">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/buttonBackspace"
             android:layout_width="@dimen/Width_Button"
             android:layout_height="@dimen/Height_Button"
             android:text="@string/c"
             app:cornerRadius="@dimen/Radius_Button" />
 
         <Button
-            android:id="@+id/button2"
-            android:layout_width="@dimen/Width_Button"
-            android:layout_height="@dimen/Height_Button"
-            android:text="@string/Hooks"
-            app:cornerRadius="@dimen/Radius_Button" />
-
-        <Button
-            android:id="@+id/button3"
-            android:layout_width="@dimen/Width_Button"
-            android:layout_height="@dimen/Height_Button"
-            android:text="@string/Percent"
-            app:cornerRadius="@dimen/Radius_Button" />
-
-        <Button
-            android:id="@+id/button5"
-            android:layout_width="@dimen/Width_Button"
-            android:layout_height="@dimen/Height_Button"
-            android:text="@string/Delete"
-            app:cornerRadius="@dimen/Radius_Button" />
-
-        <Button
-            android:id="@+id/button6"
+            android:id="@+id/buttonSeven"
             android:layout_width="@dimen/Width_Button"
             android:layout_height="@dimen/Height_Button"
             android:text="@string/_7"
             app:cornerRadius="@dimen/Radius_Button" />
 
         <Button
-            android:id="@+id/button7"
-            android:layout_width="@dimen/Width_Button"
-            android:layout_height="@dimen/Height_Button"
-            android:text="@string/_8"
-            app:cornerRadius="@dimen/Radius_Button" />
-
-        <Button
-            android:id="@+id/button8"
-            android:layout_width="@dimen/Width_Button"
-            android:layout_height="@dimen/Height_Button"
-            android:text="@string/_9"
-            app:cornerRadius="@dimen/Radius_Button" />
-
-        <Button
-            android:id="@+id/button9"
-            android:layout_width="@dimen/Width_Button"
-            android:layout_height="@dimen/Height_Button"
-            android:text="@string/Multiplication"
-            app:cornerRadius="@dimen/Radius_Button" />
-
-        <Button
-            android:id="@+id/button10"
+            android:id="@+id/buttonFour"
             android:layout_width="@dimen/Width_Button"
             android:layout_height="@dimen/Height_Button"
             android:text="@string/_4"
             app:cornerRadius="@dimen/Radius_Button" />
 
         <Button
-            android:id="@+id/button11"
-            android:layout_width="@dimen/Width_Button"
-            android:layout_height="@dimen/Height_Button"
-            android:text="@string/_5"
-            app:cornerRadius="@dimen/Radius_Button" />
-
-        <Button
-            android:id="@+id/button12"
-            android:layout_width="@dimen/Width_Button"
-            android:layout_height="@dimen/Height_Button"
-            android:text="@string/_6"
-            app:cornerRadius="@dimen/Radius_Button" />
-
-        <Button
-            android:id="@+id/button13"
-            android:layout_width="@dimen/Width_Button"
-            android:layout_height="@dimen/Height_Button"
-            android:text="@string/subtraction"
-            app:cornerRadius="@dimen/Radius_Button" />
-
-        <Button
-            android:id="@+id/button14"
+            android:id="@+id/buttonOne"
             android:layout_width="@dimen/Width_Button"
             android:layout_height="@dimen/Height_Button"
             android:text="@string/_1"
             app:cornerRadius="@dimen/Radius_Button" />
 
         <Button
-            android:id="@+id/button15"
+            android:id="@+id/buttonPlus_minus"
+            android:layout_width="@dimen/Width_Button"
+            android:layout_height="@dimen/Height_Button"
+            android:text="@string/Plus_minus"
+            app:cornerRadius="@dimen/Radius_Button" />
+
+        <Button
+            android:id="@+id/buttonHooks"
+            android:layout_width="@dimen/Width_Button"
+            android:layout_height="@dimen/Height_Button"
+            android:text="@string/Hooks"
+            app:cornerRadius="@dimen/Radius_Button" />
+
+        <Button
+            android:id="@+id/buttonEight"
+            android:layout_width="@dimen/Width_Button"
+            android:layout_height="@dimen/Height_Button"
+            android:text="@string/_8"
+            app:cornerRadius="@dimen/Radius_Button" />
+
+        <Button
+            android:id="@+id/buttonFive"
+            android:layout_width="@dimen/Width_Button"
+            android:layout_height="@dimen/Height_Button"
+            android:text="@string/_5"
+            app:cornerRadius="@dimen/Radius_Button" />
+
+        <Button
+            android:id="@+id/buttonTwo"
             android:layout_width="@dimen/Width_Button"
             android:layout_height="@dimen/Height_Button"
             android:text="@string/_2"
             app:cornerRadius="@dimen/Radius_Button" />
 
         <Button
-            android:id="@+id/button16"
-            android:layout_width="@dimen/Width_Button"
-            android:layout_height="@dimen/Height_Button"
-            android:text="@string/_3"
-            app:cornerRadius="@dimen/Radius_Button" />
-
-        <Button
-            android:id="@+id/button17"
-            android:layout_width="@dimen/Width_Button"
-            android:layout_height="@dimen/Height_Button"
-            android:text="@string/plus"
-            app:cornerRadius="@dimen/Radius_Button" />
-
-        <Button
-            android:id="@+id/button18"
-            android:layout_width="@dimen/Width_Button"
-            android:layout_height="@dimen/Height_Button"
-            android:text="@string/plus_minus"
-            app:cornerRadius="@dimen/Radius_Button" />
-
-        <Button
-            android:id="@+id/button19"
+            android:id="@+id/buttonZero"
             android:layout_width="@dimen/Width_Button"
             android:layout_height="@dimen/Height_Button"
             android:text="@string/_0"
             app:cornerRadius="@dimen/Radius_Button" />
 
         <Button
+            android:id="@+id/buttonPercent"
             android:layout_width="@dimen/Width_Button"
             android:layout_height="@dimen/Height_Button"
-            android:text="@string/dot"
+            android:text="@string/Percent"
             app:cornerRadius="@dimen/Radius_Button" />
 
         <Button
-            android:id="@+id/button21"
+            android:id="@+id/buttonNine"
             android:layout_width="@dimen/Width_Button"
             android:layout_height="@dimen/Height_Button"
-            android:text="@string/equal"
+            android:text="@string/_9"
+            app:cornerRadius="@dimen/Radius_Button" />
+
+        <Button
+            android:id="@+id/buttonSix"
+            android:layout_width="@dimen/Width_Button"
+            android:layout_height="@dimen/Height_Button"
+            android:text="@string/_6"
+            app:cornerRadius="@dimen/Radius_Button" />
+
+        <Button
+            android:id="@+id/buttonThree"
+            android:layout_width="@dimen/Width_Button"
+            android:layout_height="@dimen/Height_Button"
+            android:text="@string/_3"
+            app:cornerRadius="@dimen/Radius_Button" />
+
+        <Button
+            android:id="@+id/buttonDot"
+            android:layout_width="@dimen/Width_Button"
+            android:layout_height="@dimen/Height_Button"
+            android:text="@string/Dot"
+            app:cornerRadius="@dimen/Radius_Button" />
+
+        <Button
+            android:id="@+id/buttonDelete"
+            android:layout_width="@dimen/Width_Button"
+            android:layout_height="@dimen/Height_Button"
+            android:text="@string/Delete"
+            app:cornerRadius="@dimen/Radius_Button" />
+
+        <Button
+            android:id="@+id/buttonMultiplication"
+            android:layout_width="@dimen/Width_Button"
+            android:layout_height="@dimen/Height_Button"
+            android:text="@string/Multiplication"
+            app:cornerRadius="@dimen/Radius_Button" />
+
+        <Button
+            android:id="@+id/buttonSubtraction"
+            android:layout_width="@dimen/Width_Button"
+            android:layout_height="@dimen/Height_Button"
+            android:text="@string/Subtraction"
+            app:cornerRadius="@dimen/Radius_Button" />
+
+        <Button
+            android:id="@+id/buttonPlus"
+            android:layout_width="@dimen/Width_Button"
+            android:layout_height="@dimen/Height_Button"
+            android:text="@string/Plus"
+            app:cornerRadius="@dimen/Radius_Button" />
+
+        <Button
+            android:id="@+id/buttonEqual"
+            android:layout_width="@dimen/Width_Button"
+            android:layout_height="@dimen/Height_Button"
+            android:text="@string/Equal"
             app:cornerRadius="@dimen/Radius_Button" />
 
 
