--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
             android:layout_columnSpan="4"
             android:layout_gravity="fill"
             android:textColor="@color/white"
-            android:textSize="20sp" />
+            android:textSize="@dimen/editTextSize" />
 
 
         <Button
