--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="Width_Button">60dp</dimen>
     <dimen name="Height_Button">55dp</dimen>
     <dimen name="Radius_Button">30dp</dimen>
+    <dimen name="editTextSize">20sp</dimen>
 </resources>
