--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,30 @@
     android:background="@drawable/mountain"
     tools:context=".MainActivity">
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+
+        <RadioButton
+            android:id="@+id/ThemeOne"
+            android:layout_width="110sp"
+            android:layout_height="50sp"
+            android:layout_weight="1"
+            android:text="ThemeOne"
+            android:textColor="@color/white"/>
+
+        <RadioButton
+            android:id="@+id/ThemeTwo"
+            android:layout_width="110sp"
+            android:layout_height="50sp"
+            android:layout_weight="1"
+            android:text="ThemeTwo"
+            android:textColor="@color/white" />
+    </LinearLayout>
+
+
+
     <GridLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
