--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,24 +13,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
+        <RadioGroup
+            android:layout_width="@dimen/RadioGroupWidth"
+            android:layout_height="@dimen/RadioGroup_Height">
 
-        <RadioButton
-            android:id="@+id/ThemeOne"
-            android:layout_width="110sp"
-            android:layout_height="50sp"
-            android:layout_weight="1"
-            android:text="ThemeOne"
-            android:textColor="@color/white"/>
+            <RadioButton
+                android:id="@+id/ThemeOne"
+                android:layout_width="@dimen/RadioButton_width"
+                android:layout_height="@dimen/RadioButton_height"
+                android:layout_weight="1"
+                android:text="@string/Theme_one"
+                android:textColor="@color/white" />
 
-        <RadioButton
-            android:id="@+id/ThemeTwo"
-            android:layout_width="110sp"
-            android:layout_height="50sp"
-            android:layout_weight="1"
-            android:text="ThemeTwo"
-            android:textColor="@color/white" />
+            <RadioButton
+                android:id="@+id/ThemeTwo"
+                android:layout_width="@dimen/RadioButton_width"
+                android:layout_height="@dimen/RadioButton_height"
+                android:layout_weight="1"
+                android:text="@string/Theme_two"
+                android:textColor="@color/white" />
+        </RadioGroup>
+
     </LinearLayout>
-
 
 
     <GridLayout
